--- a/docker-compose-airflow.yaml
+++ b/docker-compose-airflow.yaml
@@ -1,6 +1,6 @@
 x-airflow-common: &airflow-common
   build:
-    context: .
+    context: ./airflow
     dockerfile: Dockerfile.airflow
     args:
       - AIRFLOW_VERSION=2.10.3
@@ -17,11 +17,11 @@ x-airflow-common: &airflow-common
     - MINIO_ACCESS_KEY=${MINIO_ACCESS_KEY}
     - MINIO_SECRET_KEY=${MINIO_SECRET_KEY}
   volumes:
-    - ./airflow/dags:/opt/airflow/dags
-    - ./airflow/logs:/opt/airflow/logs
-    - ./airflow/plugins:/opt/airflow/plugins
-    - ./airflow/include:/opt/airflow/include
-    - ./airflow/data:/opt/airflow/data
+    - ./dags:/opt/airflow/dags
+    - ./logs:/opt/airflow/logs
+    - ./plugins:/opt/airflow/plugins
+    - ./include:/opt/airflow/include
+    - ./data:/opt/airflow/data
   networks:
     - dqops_lakehouse_network
   depends_on:
