--- a/docker-compose-airflow.yaml
+++ b/docker-compose-airflow.yaml
@@ -22,6 +22,7 @@ x-airflow-common: &airflow-common
     - ./airflow/plugins:/opt/airflow/plugins
     - ./airflow/include:/opt/airflow/include
     - ./airflow/data:/opt/airflow/data
+    - ./dqops_userhome/.data:/data
   networks:
     - dqops_lakehouse_network
   depends_on:
