--- a/spark/conf/spark-defaults.conf
+++ b/spark/conf/spark-defaults.conf
@@ -9,8 +9,8 @@ spark.sql.catalog.spark_catalog org.apache.spark.sql.delta.catalog.DeltaCatalog
 spark.hadoop.fs.s3a.endpoint        http://minio:9000
 spark.hadoop.fs.s3a.path.style.access true
 spark.hadoop.fs.s3a.impl            org.apache.hadoop.fs.s3a.S3AFileSystem
-spark.hadoop.fs.s3a.access.key $MINIO_ACCESS_KEY
-spark.hadoop.fs.s3a.secret.key $MINIO_SECRET_KEY
+spark.hadoop.fs.s3a.access.key minioadmin
+spark.hadoop.fs.s3a.secret.key minioadmin
 
 # ======================================================================================
 # Performance Tuning Configurations
